Night, sunrise, sunset, and sandstorms

--- a/assets/minecraft/optifine/sky/world0/sky2.properties
+++ b/assets/minecraft/optifine/sky/world0/sky2.properties
@@ -1,4 +1,4 @@
-source=./noon.png
-startFadeIn=6:00
-endFadeIn=6:45
-endFadeOut=18:45
+source=./sunrise.png
+startFadeIn=5:20
+endFadeIn=5:45
+endFadeOut=6:30
